# rust-codebase-search

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
.claude/skills/codebase-search/: SKILL.md
.github/workflows/: build.yml
benches/: benchmark.rs
src/: advanced.rs  cli.rs  config.rs  context_enriched.rs  database.rs  embedding.rs  error.rs  gitignore.rs  indexing.rs  lib.rs  main.rs  manifest.rs  mcp.rs  performance.rs  query_expansion.rs  search.rs  session.rs  splitter.rs  syntax_aware.rs
src/performance/: batch.rs  cache.rs  distributed.rs  hnsw.rs
tests/: integration_test.rs
