[package]
name = "code-search"
version = "0.1.0"
edition = "2021"

[features]
default = []
onnx = ["ort", "tokenizers", "hf-hub"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
ndarray = "0.17"
clap = { version = "4", features = ["derive"] }
termcolor = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
walkdir = "2"
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
toml = "0.8"
memmap2 = "0.9"
indicatif = "0.17"

# Optional ONNX Runtime dependencies
ort = { version = "2.0.0-rc.9", features = ["download-binaries", "copy-dylibs"], optional = true }
tokenizers = { version = "0.19", optional = true }
hf-hub = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bin]]
name = "code-search"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
